--- a/jeecg-boot/jeecg-boot-module-system/src/main/resources/application.yml
+++ b/jeecg-boot/jeecg-boot-module-system/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 spring:
   profiles:
     active: dev
+
+  flyway:
+    locations: ["classpath:db/migration"]
+    validate-on-migrate: true
+    placeholder-replacement: false
+
 swagger:
   production: false
   basic:
