--- a/jeecg-boot/deploy/application-docker.yml
+++ b/jeecg-boot/deploy/application-docker.yml
@@ -61,16 +61,16 @@ spring:
   jackson:
     date-format:   yyyy-MM-dd HH:mm:ss
     time-zone:   GMT+8
-  jpa:
-    open-in-view: false
+  aop:
+    proxy-target-class: true
   activiti:
     check-process-definitions: false
     #启用作业执行器
     async-executor-activate: false
     #启用异步执行器
     job-executor-activate: false
-  aop:
-    proxy-target-class: true
+  jpa:
+    open-in-view: false
   #配置freemarker
   freemarker:
     # 设置模板后缀名
@@ -122,38 +122,38 @@ spring:
         poolPreparedStatements: true
         maxPoolPreparedStatementPerConnectionSize: 20
         # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-        filters: stat,wall,slf4j
+        filters: stat,slf4j
         # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
         connectionProperties: druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
       datasource:
-          master:
-            url: jdbc:mysql://127.0.0.1:3306/jeecg-boot?characterEncoding=UTF-8&useUnicode=true&useSSL=false&tinyInt1isBit=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
-            username: root
-            password: root
-            driver-class-name: com.mysql.cj.jdbc.Driver
+        master:
+          url: jdbc:mysql://jeecg-boot-mysql:3306/jeecg-boot?characterEncoding=UTF-8&useUnicode=true&useSSL=false&tinyInt1isBit=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+          username: root
+          password: root
+          driver-class-name: com.mysql.cj.jdbc.Driver
           # 多数据源配置
           #multi-datasource1:
-            #url: jdbc:mysql://localhost:3306/jeecg-boot2?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
-            #username: root
-            #password: root
-            #driver-class-name: com.mysql.cj.jdbc.Driver
+          #url: jdbc:mysql://localhost:3306/jeecg-boot2?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+          #username: root
+          #password: root
+          #driver-class-name: com.mysql.cj.jdbc.Driver
   #redis 配置
   redis:
-     database: 0
-     host: 192.168.1.199
-     lettuce:
-       pool:
-         max-active: 8   #最大连接数据库连接数,设 0 为没有限制
-         max-idle: 8     #最大等待连接中的数量,设 0 为没有限制
-         max-wait: -1ms  #最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
-         min-idle: 0     #最小等待连接中的数量,设 0 为没有限制
-       shutdown-timeout: 100ms
-     password: ''
-     port: 6379
+    database: 0
+    host: jeecg-boot-redis
+    lettuce:
+      pool:
+        max-active: 8   #最大连接数据库连接数,设 0 为没有限制
+        max-idle: 8     #最大等待连接中的数量,设 0 为没有限制
+        max-wait: -1ms  #最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
+        min-idle: 0     #最小等待连接中的数量,设 0 为没有限制
+      shutdown-timeout: 100ms
+    password: ''
+    port: 6379
 #mybatis plus 设置
 mybatis-plus:
-   mapper-locations: classpath*:org/jeecg/modules/**/xml/*Mapper.xml
-   global-config:
+  mapper-locations: classpath*:org/jeecg/modules/**/xml/*Mapper.xml
+  global-config:
     # 关闭MP3.0自带的banner
     banner: false
     db-config:
@@ -161,9 +161,9 @@ mybatis-plus:
       id-type: 4
       # 默认数据库表下划线命名
       table-underline: true
-   configuration:
+  configuration:
     # 这个配置会将执行的sql打印出来，在开发或测试的时候可以用
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    #log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     # 返回类型为Map,显示null对应的字段
     call-setters-on-nulls: true
 #jeecg专用配置
@@ -177,21 +177,21 @@ jeecg :
     webapp: D://opt//webapp
   #短信秘钥
   sms:
-     accessKeyId: LTAIpW4gUG7xYDNI
-     accessKeySecret: ??
+    accessKeyId: ??
+    accessKeySecret: ??
   shiro:
-     excludeUrls: /test/jeecgDemo/demo3,/test/jeecgDemo/redisDemo/**,/category/**,/visual/**,/map/**,/jmreport/bigscreen2/**
+    excludeUrls: /test/jeecgDemo/demo3,/test/jeecgDemo/redisDemo/**,/category/**,/visual/**,/map/**,/jmreport/bigscreen2/**
   #阿里云oss存储配置
   oss:
     endpoint: oss-cn-beijing.aliyuncs.com
     accessKey: ??
     secretKey: ??
     bucketName: jeecgos
-    staticDomain: https://static.jeecg.com
-  # ElasticSearch 设置
+    staticDomain: ??
+  # ElasticSearch 6设置
   elasticsearch:
     cluster-name: jeecg-ES
-    cluster-nodes: http://fileview.jeecg.com
+    cluster-nodes: 127.0.0.1:9200
     check-enabled: false
   # 表单设计器配置
   desform:
@@ -200,7 +200,7 @@ jeecg :
     # 文件、图片上传方式，可选项：qiniu（七牛云）、system（跟随系统配置）
     upload-type: system
   # 在线预览文件服务器地址配置
-  file-view-domain: http://127.0.0.1:8012
+  file-view-domain: 127.0.0.1:8012
   # minio文件上传
   minio:
     minio_url: http://minio.jeecg.com
@@ -218,9 +218,14 @@ jeecg :
     domain: https://wwo.wps.cn/office/
     appid: ??
     appsecret: ??
+#Mybatis输出sql日志
+logging:
+  level:
+    org.jeecg.modules.system.mapper : debug
 #cas单点登录
 cas:
   prefixUrl: http://cas.example.org:8443/cas
 #enable swagger
 swagger:
   enable: true
+
