--- a/jeecg-boot/docker-compose.yml
+++ b/jeecg-boot/docker-compose.yml
@@ -1,13 +1,12 @@
 version: '2'
 services:
   jeecg-boot-mysql:
-    build:
-      context: ./db
+    image: registry.cn-shanghai.aliyuncs.com/hellodock/mysql:8.0
     environment:
+      MYSQL_DATABASE: jeecg-boot
       MYSQL_ROOT_PASSWORD: root
     restart: always
     container_name: jeecg-boot-mysql
-    image: jeecg-boot-mysql
     command:
       --character-set-server=utf8mb4
       --collation-server=utf8mb4_general_ci
@@ -17,19 +16,39 @@ services:
     ports:
       - 3306:3306
 
+  dba:
+    image: registry.cn-shanghai.aliyuncs.com/hellodock/adminer:latest
+    restart: always
+    ports:
+      - 8081:8080
+    depends_on:
+      - jeecg-boot-mysql
+
   jeecg-boot-redis:
-    image: redis:5.0
+    image: registry.cn-shanghai.aliyuncs.com/hellodock/redis:5.0
     ports:
       - 6379:6379
     restart: always
     container_name: jeecg-boot-redis
 
-
-  jeecg-boot-system:
-    build:
-      context: ./jeecg-boot-module-system
+  mq:
+    hostname: mq
+    image: registry.cn-shanghai.aliyuncs.com/hellodock/activemq:latest
     restart: always
-    container_name: jeecg-boot-system
-    image: jeecg-boot-system
     ports:
-      - 8080:8080
+      - 61616:61616
+      - 61613:61613
+      - 8161:8161
+
+#  jeecg-boot-system:
+#    build:
+#      context: ./jeecg-boot-module-system
+#    restart: always
+#    container_name: jeecg-boot-system
+#    image: jeecg-boot-system
+#    ports:
+#      - 8080:8080
+#    depends_on:
+#      - jeecg-boot-redis
+#      - jeecg-boot-mysql
+#      - mq
