生产改造关键点：集成阿里云OSS，云存储私有链接方案，解决文件权限访问控制

--- a/jeecg-boot/deploy/application.yml
+++ b/jeecg-boot/deploy/application.yml
@@ -7,6 +7,15 @@ spring:
     validate-on-migrate: true
     placeholder-replacement: false
 
+# 阿里云
+ali:
+  # OSS云存储
+  oss:
+    endpoint: oss-cn-shanghai.aliyuncs.com
+    accessKey: input_your_own_access_key
+    secretKey: input_your_own_secret_key
+
+# API文档
 swagger:
   production: false
   basic:
