--- a/jeecg-boot/deploy/application.yml
+++ b/jeecg-boot/deploy/application.yml
@@ -9,6 +9,10 @@ spring:
 
 # 阿里云
 ali:
+  # api网关
+  api:
+    app-code: input_your_own_app_code
+
   # OSS云存储
   oss:
     endpoint: oss-cn-shanghai.aliyuncs.com
