--- a/jeecg-boot/jeecg-boot-module-system/pom.xml
+++ b/jeecg-boot/jeecg-boot-module-system/pom.xml
@@ -42,6 +42,20 @@
 			<version>5.2.4</version>
 		</dependency>
 
+		<!-- 阿里云 -->
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-core</artifactId>
+			<version>4.5.14</version>
+		</dependency>
+
+        <!-- 阿里云OCR -->
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>ocr20191230</artifactId>
+			<version>0.2.16</version>
+		</dependency>
+
 		<!-- 阿里云OSS -->
 		<dependency>
 			<groupId>com.aliyun.oss</groupId>
