--- a/jeecg-boot/jeecg-boot-module-system/pom.xml
+++ b/jeecg-boot/jeecg-boot-module-system/pom.xml
@@ -49,6 +49,13 @@
 			<version>4.5.14</version>
 		</dependency>
 
+		<!-- 阿里云短信 -->
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
         <!-- 阿里云OCR -->
 		<dependency>
 			<groupId>com.aliyun</groupId>
